# cv_lab1

./: CMakeLists.txt  HsvSlider.cpp  HsvSlider.h  LabImageViewer.cpp  LabImageViewer.h  MainWindow.cpp  MainWindow.h  ParamDialog.cpp  ParamDialog.h  README.md  colorsScheme.h  main.cpp
algorithms/: algorithms.cpp  algorithms.h  filters.cpp  filters.h  segmentation.cpp  segmentation.h
